objects/ssot__Claim__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApprovedAmount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentDateTime__c</fullName>
        <label>Assessment Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AuthoredById__c</fullName>
        <label>Authored By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthoredByObject__c</fullName>
        <label>Authored By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BilledAmount__c</fullName>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillingEndDate__c</fullName>
        <label>Billing End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BillingEndDt__c</fullName>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BillingStartDate__c</fullName>
        <label>Billing Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BillingStartDt__c</fullName>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Category__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelType__c</fullName>
        <label>Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimPaymentId__c</fullName>
        <label>Claim Payment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_ClaimantId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_ClaimantId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Claim_ClaimantId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Claim_ClaimantId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_ClaimantId_map_Individual_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_ClaimantId_map_Individual_Id_N_1</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Claim_ClaimantId_map_Individual_Id_N_1</relationshipLabel>
        <relationshipName>Claim_ClaimantId_map_Individual_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_ClaimantId_map_Patient_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_ClaimantId_map_Patient_Id_N_1</label>
        <referenceTo>ssot__Patient__dlm</referenceTo>
        <relationshipLabel>Claim_ClaimantId_map_Patient_Id_N_1</relationshipLabel>
        <relationshipName>Claim_ClaimantId_map_Patient_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_IncidentId_map_Incident_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_IncidentId_map_Incident_Id_N_1</label>
        <referenceTo>ssot__Incident__dlm</referenceTo>
        <relationshipLabel>Claim_IncidentId_map_Incident_Id_N_1</relationshipLabel>
        <relationshipName>Claim_IncidentId_map_Incident_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_InsurerId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_InsurerId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Claim_InsurerId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Claim_InsurerId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Claim_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Claim_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_PriorityId_map_CodeSet_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_PriorityId_map_CodeSet_Id_N_1</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>Claim_PriorityId_map_CodeSet_Id_N_1</relationshipLabel>
        <relationshipName>Claim_PriorityId_map_CodeSet_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_StatusId_map_CodeSet_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_StatusId_map_CodeSet_Id_N_1</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>Claim_StatusId_map_CodeSet_Id_N_1</relationshipLabel>
        <relationshipName>Claim_StatusId_map_CodeSet_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_SubTypeId_map_CodeSet_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_SubTypeId_map_CodeSet_Id_N_1</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>Claim_SubTypeId_map_CodeSet_Id_N_1</relationshipLabel>
        <relationshipName>Claim_SubTypeId_map_CodeSet_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Claim_TypeId_map_CodeSet_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_TypeId_map_CodeSet_Id_N_1</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>Claim_TypeId_map_CodeSet_Id_N_1</relationshipLabel>
        <relationshipName>Claim_TypeId_map_CodeSet_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimantId__c</fullName>
        <label>Claimant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimantObject__c</fullName>
        <label>Claimant Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoPayAmount__c</fullName>
        <label>Co Pay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeductibleAmount__c</fullName>
        <label>Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeductibleUnallocatedAmount__c</fullName>
        <label>Deductible Unallocated Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EligibleAmount__c</fullName>
        <label>Eligible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EligiblePercent__c</fullName>
        <label>Eligible Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FinalizedDateTime__c</fullName>
        <label>Finalized Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentId__c</fullName>
        <label>Incident</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InitiationDateTime__c</fullName>
        <label>Initiation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InitiationDt__c</fullName>
        <label>Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyId__c</fullName>
        <label>Insurance Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyObject__c</fullName>
        <label>Insurance Policy Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurerId__c</fullName>
        <label>Insurer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDriveable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driveable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsInhabitable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inhabitable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LossDateTime__c</fullName>
        <label>Loss Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LossType__c</fullName>
        <label>Loss Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeType__c</fullName>
        <label>Outcome Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayableAmount__c</fullName>
        <label>Payable Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryInsuredAssetId__c</fullName>
        <label>Primary Insured Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityId__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonText__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonType__c</fullName>
        <label>Reason Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponsiblePartyId__c</fullName>
        <label>Responsible Party</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponsiblePartyObject__c</fullName>
        <label>Responsible Party Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingLocationId__c</fullName>
        <label>Servicing Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingLocationObject__c</fullName>
        <label>Servicing Location Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SiteVisitDateTime__c</fullName>
        <label>Site Visit Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StatusId__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubTypeId__c</fullName>
        <label>Sub Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmittedAmount__c</fullName>
        <label>Submitted Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SummaryText__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAmount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TentativeServiceDate__c</fullName>
        <label>Tentative Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCoInsuranceAmt__c</fullName>
        <label>Total Co-Insurance Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCoPayAmount__c</fullName>
        <label>Total CoPay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeductibleAmount__c</fullName>
        <label>Total Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeductibleUnallocatedAmount__c</fullName>
        <label>Total Deductible Unallocated Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalEligibleAmount__c</fullName>
        <label>Total Eligible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalEligiblePercent__c</fullName>
        <label>Total Eligible Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPayableAmount__c</fullName>
        <label>Total Payable Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TypeId__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueIdentifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127953962_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_ServicingLocationId_map_Health_rel</label>
        <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
        <relationshipLabel>Claim_ServicingLocationId_map_Health_rel</relationshipLabel>
        <relationshipName>rel_1723127953962_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128208779_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_ResponsiblePartyId_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Claim_ResponsiblePartyId_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1723128208779_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128321630_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim_ClaimPaymentId_map_ClaimPaymen_rel</label>
        <referenceTo>ssot__ClaimPayment__dlm</referenceTo>
        <relationshipLabel>Claim_ClaimPaymentId_map_ClaimPaymen_rel</relationshipLabel>
        <relationshipName>rel_1723128321630_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>